; ModuleID = '/home/carl/AnghaBench/freebsd/bin/ed/extr_main.c_handle_int.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/ed/extr_main.c_handle_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sigactive = common dso_local global i32 0, align 4
@sigflags = common dso_local global i32 0, align 4
@env = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_int(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @sigactive, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %1
  %6 = call i32 @quit(i32 1)
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i32, i32* %2, align 4
  %9 = sub nsw i32 %8, 1
  %10 = shl i32 1, %9
  %11 = xor i32 %10, -1
  %12 = load i32, i32* @sigflags, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* @sigflags, align 4
  %14 = load i32, i32* @env, align 4
  %15 = call i32 @longjmp(i32 %14, i32 -1)
  ret void
}

declare dso_local i32 @quit(i32) #1

declare dso_local i32 @longjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
